# wrf-plugin

./: .gitignore  CMakeLists.txt  README.md  bake.py  compare.py  make_reference.py  module_ra_rrtmg_sw.diff  requirements.txt
data/: .gitignore  README.md  dump_interpolate_in_0_sw.nc  dump_tau_out_0_sw.nc
include/: ABI.h  rrtmg.h
include/fxx/: Memory.h
include/fxx/bits/: hrect.h  index.h  index_tuple.h  memref.h  memref_iface.h  strided_layout.h  tensor.h  tensor_storage.h
include/rrtmg/: kernels.h
include/rrtmgp/: Array.h  Constants.h  Netcdf_interface.h  kernel_launchers.h
rrtmgp/: parameters.py  reference.py  solar.py
src/: Constants.cpp  data.inc  gas_optics_fpga.cpp  hls.burst.cpp  kernels.cpp  plugin.cpp  runner.cpp
